# quadrotor_landing

./: README.md
quad_state_estimation/: CMakeLists.txt  package.xml
quad_state_estimation/config/: apriltag_settings.yaml  apriltag_settings_rotors.yaml  relative_pose_EKF.yaml  relative_pose_EKF_hardware.yaml  relative_pose_EKF_rotors.yaml  relative_pose_filter_hardware.yaml  relative_pose_filter_rotors.yaml  tags.yaml  tags_hardware.yaml  tags_rotors.yaml  tags_rotors_bundle.yaml
quad_state_estimation/include/: apriltag_detection.h  mahony_filter.h  quaternion_helper.h  quaternion_helper.hpp  relative_pose_EKF.hpp  relative_pose_EKF_node.hpp  relative_pose_filter.h  relative_pose_filter_node.h  relative_pose_filter_settings.h  relative_pose_utils.h
quad_state_estimation/launch/: continuous_detection_rotors.launch  start_EKF_Cpp_rosbag_record.launch  start_EKF_Python_rosbag_record.launch  start_EKF_debug_replay_rosbag_record.launch  start_EKF_debug_rosbag.launch  start_fake_magnetometer.launch  start_joystick_rosbag.launch  start_joystick_rosbag_record.launch  start_pose_filter_Python_rosbag_record.launch  start_rel_pose_EKF.launch  start_rel_pose_EKF_test.launch  start_relative_pose_filter_python.launch  start_state_est_hardware.launch  start_vision_hardware.launch  state_est_sim_test.launch  state_est_sim_test_bundle.launch  state_est_sim_test_fake_joy.launch  state_est_sim_test_fake_joy_bundle.launch  state_est_sim_test_replay.launch
quad_state_estimation/src/: mahony_filter.cpp  quaternion_helper.cpp  relative_pose_EKF.cpp  relative_pose_EKF_main.cpp  (+5 more)
(+30 files in other folders)
